feat(docs): add starlight-links-validator and fix broken links
- Add starlight-links-validator plugin to catch broken links at build time
- Fix 9 broken internal links missing /sky/ base prefix

--- a/docs-website/src/content/docs/getting-started/quick-start.mdx
+++ b/docs-website/src/content/docs/getting-started/quick-start.mdx
@@ -80,6 +80,6 @@ Total: 100.0% (3/3 lines)
 
 ## Next Steps
 
-- [Tools Overview](/tools/overview) - Learn about all Sky tools
-- [Coverage Guide](/coverage/getting-started) - Deep dive into coverage
-- [starlark-go-x](/starlark-go-x/overview) - Our enhanced interpreter
+- [Tools Overview](/sky/tools/overview/) - Learn about all Sky tools
+- [Coverage Guide](/sky/coverage/getting-started/) - Deep dive into coverage
+- [starlark-go-x](/sky/starlark-go-x/overview/) - Our enhanced interpreter
