--- a/docs-website/src/content/docs/starlark-go-x/type-annotations.mdx
+++ b/docs-website/src/content/docs/starlark-go-x/type-annotations.mdx
@@ -9,7 +9,7 @@ starlark-go-x supports parsing Python-style type annotations.
 
 ## Syntax
 
-```python
+```starlark
 def greet(name: str) -> str:
     return "Hello, " + name
 
