--- a/docs-website/src/content/docs/starlark/overview.mdx
+++ b/docs-website/src/content/docs/starlark/overview.mdx
@@ -28,7 +28,7 @@ import { Card, CardGrid, LinkCard } from '@astrojs/starlight/components';
 
 ## Quick Example
 
-```python
+```starlark
 # Define data
 people = {
     "Alice": 22,
