docs: clarify starlark-go-x is experimental with upstream goal
Make clear that starlark-go-x aims to contribute back to the official
implementation, not fragment the ecosystem.

--- a/docs-website/src/content/docs/starlark/implementations.mdx
+++ b/docs-website/src/content/docs/starlark/implementations.mdx
@@ -66,8 +66,8 @@ func main() {
 }
 ```
 
-<Aside type="tip">
-For Go projects needing advanced features, see [starlark-go-x](https://github.com/albertocavalcante/starlark-go-x) - an enhanced fork with additional builtins.
+<Aside type="note">
+Some features missing from starlark-go are available in experimental forks like [starlark-go-x](https://github.com/albertocavalcante/starlark-go-x). The goal of such forks is to upstream improvements back to the official implementation, not to fragment the ecosystem.
 </Aside>
 
 ## starlark-rust
