--- a/docs-website/src/content/docs/starlark/resources.mdx
+++ b/docs-website/src/content/docs/starlark/resources.mdx
@@ -36,7 +36,8 @@ Curated resources for learning and working with Starlark.
 | [starlark-go](https://github.com/google/starlark-go) | Go | Google |
 | [starlark-rust](https://github.com/facebook/starlark-rust) | Rust | Meta |
 | [starlark (Java)](https://github.com/bazelbuild/bazel/tree/master/src/main/java/net/starlark/java) | Java | Bazel team |
-| [starlark-go-x](https://github.com/albertocavalcante/starlark-go-x) | Go | Sky (enhanced fork) |
+
+*[starlark-go-x](https://github.com/albertocavalcante/starlark-go-x) is an experimental fork of starlark-go exploring additional features. The goal is to upstream improvements, not fragment the ecosystem.*
 
 ## Developer Tools
 
