--- a/docs-website/src/content/docs/starlark/tooling.mdx
+++ b/docs-website/src/content/docs/starlark/tooling.mdx
@@ -44,14 +44,29 @@ Download from [GitHub Releases](https://github.com/withered-magic/starpls/releas
 
 **VS Code Setup:**
 
-1. Install the [Starpls extension](https://marketplace.visualstudio.com/items?itemName=withered-magic.starpls-vscode)
-2. Configure in settings:
+Starpls integrates with VS Code through the [vscode-bazel extension](https://marketplace.visualstudio.com/items?itemName=BazelBuild.vscode-bazel) (v0.10.0+):
 
 ```json
 {
-  "starpls.server.path": "/path/to/starpls"
+  "bazel.lsp.command": "starpls"
 }
 ```
+
+### bazel-lsp
+
+[bazel-lsp](https://github.com/cameron-martin/bazel-lsp) is based on Facebook's Starlark language server with Bazel-specific extensions.
+
+**VS Code Setup:**
+
+```json
+{
+  "bazel.lsp.command": "bazel-lsp"
+}
+```
+
+<Aside type="note">
+The vscode-bazel extension supports both starpls and bazel-lsp. Both are under active development with no official recommendation between them.
+</Aside>
 
 ### Buck2 LSP
 
@@ -69,16 +84,7 @@ buck2 lsp
 
 **VS Code Setup:**
 
-```json
-{
-  "starlark.lsp.path": "buck2",
-  "starlark.lsp.args": ["lsp"]
-}
-```
-
-### Bazel Starlark LSP
-
-For Bazel, use [bazel-lsp](https://github.com/ApollosProject/starlark-lsp) or configure Starpls with Bazel builtins.
+See [Buck2 VS Code extension](https://marketplace.visualstudio.com/items?itemName=nicholasyang.buck2) for integration.
 
 ## Debugging (DAP)
 
@@ -121,14 +127,8 @@ DAP support is primarily available in starlark-rust. Other implementations may r
 ### Visual Studio Code
 
 <CardGrid>
-  <Card title="Starpls" icon="seti:code">
-    General Starlark support
-
-    [Install](https://marketplace.visualstudio.com/items?itemName=withered-magic.starpls-vscode)
-  </Card>
-
   <Card title="Bazel" icon="seti:bazel">
-    Bazel BUILD file support
+    Bazel BUILD files + LSP support (starpls or bazel-lsp)
 
     [Install](https://marketplace.visualstudio.com/items?itemName=BazelBuild.vscode-bazel)
   </Card>
@@ -365,16 +365,10 @@ def build_target(name, srcs, deps = []):
 
 2. **Configure VS Code**
 
-   Install Starpls extension and configure:
+   Install the [vscode-bazel extension](https://marketplace.visualstudio.com/items?itemName=BazelBuild.vscode-bazel) and configure:
    ```json
    {
-     "starpls.server.path": "starpls",
-     "files.associations": {
-       "*.star": "starlark",
-       "*.bzl": "starlark",
-       "BUILD": "starlark",
-       "WORKSPACE": "starlark"
-     }
+     "bazel.lsp.command": "starpls"
    }
    ```
 
