docs(skylint): clarify rule categorization
Add note that tables organize by logical purpose, while actual
categorization (via --list-rules) is based on name patterns.

--- a/docs-website/src/content/docs/tools/skylint.mdx
+++ b/docs-website/src/content/docs/tools/skylint.mdx
@@ -51,7 +51,11 @@ skylint --format=github .
 
 ## Rules
 
-skylint includes all buildtools warnings organized by category. Use `skylint --list-rules` to see available rules.
+skylint wraps all [buildtools warnings](https://github.com/bazelbuild/buildtools/blob/master/WARNINGS.md). Use `skylint --list-rules` to see the exact categorization.
+
+<Aside type="note">
+The tables below organize rules by their logical purpose. The actual category assignment (shown in `--list-rules`) is based on rule name patterns and may differ slightly.
+</Aside>
 
 ### Categories
 
